--- a/Paint WEBGL/estilo.css
+++ b/Paint WEBGL/estilo.css
@@ -3,33 +3,23 @@ p{
 }
 
 /* COLORS */
-.red{background-color: #f08080;}
+.vermelho{background-color: rgb(255, 0, 0);}
 
-.blue{background-color: #add8e6;}
+.verde{background-color: rgb(0, 255, 0);}
 
-.yellow{background-color: #daa520}
+.azul{background-color: rgb(0, 0, 255);}
 
-.green{background-color: #adff2f;}
+.amarelo{background-color: rgb(255, 255, 0);}
 
-.purple{background-color: #800080;}
+.ciano{background-color: rgb(0, 255, 255);}
 
-.orange{background-color: #ff8c00;}
+.rosa{background-color: rgb(255, 0, 255);}
 
-.pink{background-color: #ffc0cb;}
+.cinza{background-color: rgb(128, 128, 128);}
 
-.grey{background-color: #808080;}
+.preto{background-color: rgb(0, 0, 0);}
 
-.black{background-color: #000000;}
-
-.white{background-color: white; border-color: black;}
-
-.sky-blue{background-color: #87cefa;}
-
-.aqua{background-color: #00ffff;}
-
-.brown{background-color: #deb887;}
-
-.dark-blue{background-color: #0000cd;}
+.branco{background-color: rgb(255, 255, 255);}
 
 /* FIGURES*/
 
@@ -69,9 +59,9 @@ p{
 }
 
 .btn-size:focus{
-    background-color: transparent;
+    border: 2px #000 solid;;
 }
 
 .btn-size:hover{
-    background-color: transparent;
+    border: 1px #000 solid;
 }
