--- a/Paint WEBGL/estilo.css
+++ b/Paint WEBGL/estilo.css
@@ -1,5 +1,67 @@
+@font-face	{
+    font-family: 'FonteLogo';
+    src: url("bubblegum-sans-regular.otf");
+}
+
+body{
+    background-color: #606060;
+}
+
 p{
     font-size: 18px;
+}
+
+.interface{
+    background-color: #606060;
+}
+
+.rendererStyle{
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, .6);
+}
+
+header#cabecalho h1{
+    font-family: 'FonteLogo', sans-serif;
+	font-size: 30pt;
+	color: #000;
+	text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+	padding: 0px;
+    margin-bottom: 1%;
+    margin-top: 1%;
+    text-align: center;
+}
+
+.oculto{
+    display: none;
+}
+
+ul{
+    list-style: none;
+}
+button{
+    box-shadow: 4px 5px 6px rgba(0, 0, 0, .6);
+}
+/* ASIDES */
+.direita{
+    position: absolute;
+    top: 2%;
+    right: .5%;
+    padding: 10px;
+}
+
+.esquerda{
+    position: absolute;
+    top: 2%;
+    left: -1.7%;
+    padding: 10px;
+}
+
+.corpo{
+    display: inline-block;
+    width: 80%;
+    margin-left: 8.5%;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .7);
 }
 
 /* COLORS */
@@ -53,15 +115,22 @@ p{
 }
 
 .btn-size{
+    height: 50px;
+    width: 52px;
+    margin: 10px 10px 0 0;
+}
+
+.forma{
     height: 60px;
     width: 62px;
     margin: 10px 10px 0 0;
 }
 
 .btn-size:focus{
-    border: 2px #000 solid;;
+    border: 3px #000 solid;;
+}
+.btn-size.preto:focus{
+    border: 3px #808080 solid;
 }
 
-.btn-size:hover{
-    border: 1px #000 solid;
-}
+
